Add "opens" for nio internals aeron and leveldb uses